create all views and routes

--- a/views/words.erb
+++ b/views/words.erb
@@ -5,11 +5,11 @@
 <% if @words.any? %>
   <ul>
     <% @words.each do |word| %>
-      <li><%= word.word %></li>
+      <li><a href="/words/<%= word.id %>"><%= word.word %></a></li>
     <% end %>
   </ul>
 <% else %>
   <p>There are currently no words to display.</p>
 <% end %>
 
-<a href="/word/new_word">Add a new word</a>
+<a href="/words/new_word">Add a new word</a>
