--- a/views/new_word.erb
+++ b/views/new_word.erb
@@ -1,6 +1,6 @@
 <h1>Add a new word</h1>
 
-<form action="/word" method="post">
+<form action="/words" method="post">
   <div class="form-group">
     <label for="word_name">Word</label>
     <input id="n" name="word_name" class="form-control" type="text">
