--- a/views/word.erb
+++ b/views/word.erb
@@ -1,4 +1,28 @@
-<h4>Word: <%= @word.word %></h4>
+<h2>Word: <%= @word.word %></h2>
 
-<p><a href="/words/<%= @word.id %>/edit">Edit Word</a></p>
-<a href="/words">Return to words</a>
+<h3>Word Definitions</h3>
+
+  <% if @word.definitions %>
+    <ol>
+      <% @word.definitions.each do |definition| %>
+        <li><a href="/words/<%= @word.id %>/definitions/<%= definition.id %>"><%= definition.name %></a></li>
+      <% end %>
+    </ol>
+  <% else %>
+    <p>There are no definitions listed for this word yet.</p>
+  <% end %>
+
+<h4>Add a definition:</h4>
+
+<form action="/words/<%= @word.id %>/definitions" method="post">
+  <div class="form-group">
+    <label for="definition_name">Definition</label>
+    <input id="definition_name" name="definition_name" class="form-control" type="text">
+  </div>
+  <button type="submit" class="btn">Add definition</button>
+</form>
+
+
+
+<p><a href="/words/<%= @word.id %>/edit">Edit word</a></p>
+<p><a href="/words">Return to word list</a></p>
